--- a/package.json
+++ b/package.json
@@ -17,10 +17,12 @@
     "gatsby-source-stripe": "^3.0.4",
     "gatsby-transformer-sharp": "^2.2.21",
     "materialize": "^1.0.0",
+    "materialize-css": "^1.0.0-rc.2",
     "prop-types": "^15.7.2",
     "react": "^16.10.2",
     "react-dom": "^16.10.2",
     "react-helmet": "^5.2.1",
+    "react-materialize": "^3.4.1",
     "styled-components": "^4.4.0"
   },
   "devDependencies": {
